<resources>
    <string name="app_name">Tienda Virtual</string>

    <string name="default_web_client_id">842964414694-07ne7caee2ddcrecmnh3p5idbr2t0q0d.apps.googleusercontent.com</string>
    <string name="mi_google_maps_api_key">AIzaSyBAXN_pM9qv-7XKT0Dju5f3FpB4t__youA</string>
    <string name="open_drawer">Open drawer</string>
    <string name="close_drawer">Close drawer</string>

    <string name="tipoVendedor">Vendedor</string>
    <string name="tipoCliente">Cliente</string>

    <!--NavigationDrawer Vendedor-->
    <string name="op_inicio_v">Inicio</string>
    <string name="op_mi_tienda_v">Mi tienda</string>
    <string name="op_categotias_v">Categorias</string>
    <string name="op_productos_v">Productos</string>
    <string name="op_resenia_v">Reseñas</string>
    <string name="op_cerrar_sesion_v">Cerrar sesión</string>

    <!--NavigationDrawer Cliente-->
    <string name="op_inicio_c">Inicio</string>
    <string name="op_mi_peril_c">Perfil</string>
    <string name="op_cerrar_sesion_c">Cerrar sesión</string>

    <!--Bottom Navigation Bar Vendedor-->
    <string name="op_mis_productos_v">Mis productos</string>
    <string name="op_mis_ordenes_v">Pedidos</string>

    <!--Bottom Navigation Bar Cliente-->
    <string name="op_tienda_c">Tienda</string>
    <string name="op_favoritos_c">Favoritos</string>
    <string name="op_carrito_c">Carrito</string>
    <string name="op_mis_ordenes_c">Mis pedidos</string>

    <string name="txt_bienvenida">Bienvenido</string>


    <!--Registro de vendedor-->
    <string name="txtRegistroV">Registro de vendedor</string>
    <string name="etNombresV">Nombres completos</string>
    <string name="etEmail">Email</string>
    <string name="etPassword">Password</string>
    <string name="etCPassword">Confirmar password</string>
    <string name="btnRegistrarV">Registrarme</string>


    <!--Registro de cliente-->
    <string name="txtRegistroC">Registro de cliente</string>
    <string name="etNombreC">Nombres completos</string>
    <string name="btnRegistrarC">Registrar</string>


    <!--Login de vendedor-->
    <string name="txtLoginV">Login de vendedor</string>
    <string name="btnLoginV">Ingresar</string>
    <string name="txtNoCuenta">¿No tienes una cuenta?</string>
    <string name="tvRegistrarV">Registrarme</string>

    <!--Login de cliente-->
    <string name="txtLoginC">Login de cliente</string>
    <string name="btnLoginC">Ingresar</string>
    <string name="tvRegistrarC">Registrarme</string>
    <string name="tvRecuperarPass">Recuperar contraseña</string>

    <!--Olvidar mi contraseña-->
    <string name="txtRecuperarPass">Recuperar contraseña</string>
    <string name="txtInstrucciones">Ingrese su correo electrónico oara enviarle las instrucciones de recuperación</string>
    <string name="btnEnviarInstrucciones">Enviar</string>

    <!--ACTUALIZAR CONTRASEÑA-->
    <string name="txtActualizarPass">Actualizar contraseña</string>
    <string name="txtInstruccionesP">Su nueva contraseña debe ser diferente a la actual.</string>
    <string name="etPasswordActual">Contraseña actual</string>
    <string name="etPasswordNueva">Contraseña nueva</string>
    <string name="etPasswordNuevaR">Repita nueva contraseña</string>
    <string name="btnActualizarPassword">Actualizar</string>

    <!--Productos-->
    <string name="txtAgregarProductos">Agregar productos</string>
    <string name="etNombresP">Nombre del producto</string>
    <string name="etDescripcionP">Descrpción</string>
    <string name="Categoria">Categoría</string>
    <string name="etPrecioP">Precio</string>
    <string name="txtDescuento">Descuento</string>
    <string name="etPorcentajeDescuentoP">Ingrese porcentaje. Ejm 10, 20, 50</string>
    <string name="etPrecioConDescuentoP"></string>
    <string name="etNotaDescuentoP">Ejm: 10% Desc.</string>
    <string name="btnCalcularPrecioDesc">Calcular</string>
    <string name="precioCondescuentoPTXT">Precio con descuento apli.</string>
    <string name="btnAgregarProducto">Agregar producto</string>

    <!--Agregar categorias-->
    <string name="etCategoria">Ingrese categoria</string>
    <string name="btnAgregarCat">Agregar categoria</string>

    <!--Item categoria - v-->
    <string name="item_nombre_c_v">Nombre de categoria</string>

    <!--Item categoria -c-->
    <string name="item_nombre_c_c">Nombre de categoria</string>
    <string name="item_ver_productos">Ver productos</string>

    <!--Item producto -v-->
    <string name="item_nombre_p">Nombre de producto</string>
    <string name="item_categoria_p">Categoría</string>
    <string name="item_nota_p">50% OFF</string>
    <string name="item_precio_p">00</string>
    <string name="item_precio_p_desc">00</string>

    <!--Item producto -c-->
    <string name="item_agregar_carrito_p">Añadir al carrito</string>

    <string name="txtProductoCat">Producto-categoria</string>
    <string name="etBuscarProducto">Buscar producto</string>

    <!--Registro con número teléfono-->
    <string name="txtLoginTelC">Login con teléfono</string>
    <string name="txtLoginMensaje">Necesitamos que ingrese sunúmero telefóno para continuar</string>
    <string name="etTelefonoC">Teléfono</string>
    <string name="btnEnviarCodigo">Enviar código SMS</string>
    <string name="etCodVer">Código</string>
    <string name="btnVerificarCod">Verificar código</string>
    <string name="tvReenviarCod">¿No llegó código?.<b>Reenviar</b></string>

    <!--Detalle del producto-->
    <string name="txtDetalleProducto">Detalles del pedido</string>
    <string name="tvPromCal">0.0/5</string>
    <string name="tvTotalCal">(0)</string>
    <string name="tvDejarCalificacion"><u>Escribir un comentario</u></string>
    <string name="nombrePD">Nombre del producto</string>
    <string name="descripcionPDTXT">Información general:</string>
    <string name="descripcionPD">Descripción</string>
    <string name="precioPD">00</string>
    <string name="precioDescPD">00</string>
    <string name="notaDescPD">50% OFF</string>

    <string name="imagenContadorTv">1/5</string>

    <!--Carrito de compras-->
    <string name="nombrePCar">Nombre de producto</string>
    <string name="descripcionPCar">Descripción</string>
    <string name="notaDescPCar">10% OFF</string>
    <string name="precioOriginalPCar">00</string>
    <string name="precioDescPCar">00</string>
    <string name="cantidadPCar">1</string>
    <string name="precioFinalPCar">00</string>
    <string name="btnAgregarCarrito">Agregar al carrito</string>

    <!--Zoom a la imagen-->
    <string name="cerrarZoom">Cerrar</string>

    <string name="sumaProductos">Suma productos</string>

    <string name="bienvenidaTXT">Bienvenido(a) Mark!</string>
    <string name="direccionTXT">Mi direccion</string>
    <string name="txtCategorias">Nuestras categorias</string>


    <!--Perfil del cliente-->
    <string name="txtMiPerfil">Mi perfil</string>
    <string name="nombresCperfil">Nombres completos</string>
    <string name="emailCPerfil">Email</string>
    <string name="dniCPerfil">Dni</string>
    <string name="telefonoCPerfil">Teléfono</string>
    <string name="ubicacion">Ubicación</string>
    <string name="fechaRegistroCPerfil">Fecha de registro</string>
    <string name="proveedorCPerfil">Proveedor</string>
    <string name="btnGuardarInfo">Guardar</string>
    <string name="btnActualizarContraseña">Cambiar contraseña</string>

    <!--Mapas-->
    <string name="txtSeleccionarUbicacion">Seleccione una ubicación </string>
    <string name="Btn_listo">Confirmar</string>

    <string name="btnCrearOrden">Confirmar pedido</string>

    <!--Orden de la compra-->
    <string name="idOrdenItem">Número de pedido</string>
    <string name="fechaOrdenItem">00/00/0000</string>
    <string name="estadoOrdenItem">Estado</string>
    <string name="costoOrdenItem">00</string>

    <!--Detalle de la orden-->
    <string name="tvidOrdenD">Número de pedido: </string>
    <string name="idOrdenD"> -- </string>
    <string name="tvfechaOrdenD">Fecha: </string>
    <string name="fechaOrdenD"> -- </string>
    <string name="tvestadoOrdenD">Estado: </string>
    <string name="estadoOrdenD"> -- </string>
    <string name="tvcantidadOrdenD">Cantidad productos: </string>
    <string name="cantidadOrdenD"> -- </string>
    <string name="tvcostoOrdenD">Precio: </string>
    <string name="costoOrdenD"> -- </string>
    <string name="tvdireccionOrdenD">Dirección: </string>
    <string name="direccionOrdenD"> -- </string>
    <string name="txtProductosOrdenados">Productos ordenados</string>

    <string name="itemNombreP">Nombre del producto</string>
    <string name="itemPrecioP">Precio</string>
    <string name="itemCantidadP">Cantidad</string>
    <string name="itemPrecioFinaP">Precio total</string>

    <string name="etBuscarOrdenId">Buscar un pedido</string>

    <!--Detalle del cliente-->
    <string name="tvInfoCliente">Información de cliente</string>
    <string name="txtNombresC">Nombres:</string>
    <string name="tvNombresC"> </string>
    <string name="txtDniC">Dni: </string>
    <string name="tvDniC"> </string>
    <string name="txtTelC">Teléfono</string>
    <string name="tvTelC"> </string>
    <string name="txtDireccionC">Dirección</string>
    <string name="tvDireccionC"> </string>
    <string name="btnLlamar">Llamar</string>
    <string name="btnSms">Sms</string>

    <string name="verInfoCliente">Información del cliente</string>

    <!--Paypal para pagar los clientes-->
    <string name="pago_title">Método de Pago</string>
    <string name="payment_info">Selecciona un método de pago para completar tu compra</string>
    <string name="payment_method">Métodos de pago disponibles</string>
    <string name="payment_method_description">Elige PayPal para procesar tu pago de forma segura</string>
    <string name="pay_with_paypal">Pagar con PayPal</string>
    <string name="payment_note">Nota: Esta es una versión de prueba. No se realizará ningún cargo real.</string>


    <!--El carrito vacio-->
    <string name="carrito_vacio">Tu carrito está vacío</string>
    <string name="carrito_vacio_mensaje">Explora nuestra tienda para añadir productos</string>
    <string name="ir_a_tienda">Ir a la tienda</string>

    <string name="txtActNomCat">Actualizar nombre cat.</string>
    <string name="etNuevoNomCat">Nombre de cat.</string>
    <string name="btnActualizarNomCat">Actualizar</string>

    <string name="btnAnterior">Anterior</string>
    <string name="btnSiguiente">Siguiente</string>

    <!--Calificación de un producto-->
    <string name="txtCalificacion">Calificar producto</string>
    <string name="txtcalificar">¿Cómo calificarías este producto?</string>
    <string name="tvNombreP">Funko Pop </string>
    <string name="txtopinion">¿Qué te gustaria decir acerca dd este producto?</string>
    <string name="etOpinion">Comparte tu experiencia</string>

    <string name="tvNombreUsuarioCal">Nombre de usuario</string>
    <string name="tvReseniaCal">Reseña</string>
    <string name="txtMostrarCal">Calificaciones</string>

    <string name="txtEstados">Estados del pedido</string>
    <string name="tvEstado1">Solicitud recibida</string>
    <string name="tvEstado2">En preparación</string>
    <string name="tvEstado3">Entregado</string>
    <string name="tvEstado4">Cancelado</string>

    <string name="txtGanancias">Ganancias</string>
    <string name="tvGanancias">0 €</string>

    <string name="txtPerdidas">Pérdidas</string>
    <string name="tvPerdidas">0 €</string>

    <string name="btnVerClientes">Mis clientes</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>