<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center">

    <TextView
        android:id="@+id/tvInfoCliente"
        android:text="@string/tvInfoCliente"
        android:textStyle="bold"
        android:textSize="18sp"
        android:padding="5dp"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <ImageButton
        android:id="@+id/ibCerrar"
        android:src="@drawable/ico_cerrar"
        android:background="@android:color/transparent"
        android:layout_alignParentEnd="true"
        android:padding="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <ImageView
        android:id="@+id/ivPerfil"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/img_perfil"
        android:layout_below="@id/tvInfoCliente"
        android:scaleType="centerCrop"
        android:layout_width="100dp"
        android:layout_height="100dp"/>

    <!-- Contenedor para los datos del cliente -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ivPerfil"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        android:padding="8dp">

        <!-- Nombres -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="8dp">

            <TextView
                android:id="@+id/txtNombresC"
                android:text="@string/txtNombresC"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="100dp"/>

            <TextView
                android:id="@+id/tvNombresC"
                android:text="@string/tvNombresC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"/>
        </LinearLayout>

        <!-- DNI -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="8dp">

            <TextView
                android:id="@+id/txtDniC"
                android:text="@string/txtDniC"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="100dp"/>

            <TextView
                android:id="@+id/tvDniC"
                android:text="@string/tvDniC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"/>
        </LinearLayout>

        <!-- Teléfono -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="8dp">

            <TextView
                android:id="@+id/txtTelC"
                android:text="@string/txtTelC"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="100dp"/>

            <TextView
                android:id="@+id/tvTelC"
                android:text="@string/tvTelC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"/>
        </LinearLayout>

        <!-- Dirección -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="16dp">

            <TextView
                android:id="@+id/txtDireccionC"
                android:text="@string/txtDireccionC"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="100dp"/>

            <TextView
                android:id="@+id/tvDireccionC"
                android:text="@string/tvDireccionC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"/>
        </LinearLayout>

        <!-- Botones -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLlamar"
                android:text="@string/btnLlamar"
                app:cornerRadius="8dp"
                android:textAllCaps="true"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginEnd="8dp"
                android:layout_height="wrap_content"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSms"
                android:text="@string/btnSms"
                app:cornerRadius="8dp"
                android:textAllCaps="true"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginStart="8dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>