<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Cliente.Nav_Fragments_cliente.FragmentMiPerfilC">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!--Toolbar-->
        <RelativeLayout
            android:id="@+id/toolbarRL"
            android:layout_width="match_parent"
            android:layout_height="55dp">

            <TextView
                android:text="@string/txtMiPerfil"
                android:layout_centerInParent="true"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:background="#ccc"/>

        </RelativeLayout>

        <!--Informacion del usuario -Cliente-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imgPerfil"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/img_perfil"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"/>
            
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <!--Nombres-->
                <EditText
                    android:id="@+id/nombresCperfil"
                    android:hint="@string/nombresCperfil"
                    android:inputType="textPersonName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <!--Email-->
                <EditText
                    android:id="@+id/emailCPerfil"
                    android:hint="@string/emailCPerfil"
                    android:inputType="textEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <!--DNI-->
                <EditText
                    android:id="@+id/dniCPerfil"
                    android:hint="@string/dniCPerfil"
                    android:inputType="text"
                    android:maxLength="9"
                    android:digits="0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <!--Teléfono-->
                <EditText
                    android:id="@+id/telefonoCPerfil"
                    android:hint="@string/telefonoCPerfil"
                    android:inputType="phone"
                    android:maxLength="9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/ubicacion"
                    android:hint="@string/ubicacion"
                    android:inputType="none"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>


            </com.google.android.material.textfield.TextInputLayout>

            <!--Proveedor-->
            <TextView
                android:id="@+id/proveedorCPerfil"
                android:hint="@string/proveedorCPerfil"
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnGuardarInfo"
                android:text="@string/btnGuardarInfo"
                android:layout_gravity="center"
                app:cornerRadius="8dp"
                android:textAllCaps="true"
                android:layout_width="250dp"
                android:layout_height="wrap_content"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnActualizarContraseña"
                android:text="@string/btnActualizarContraseña"
                app:cornerRadius="8dp"
                android:layout_gravity="center"
                android:textAllCaps="true"
                android:layout_width="250dp"
                android:visibility="gone"
                android:layout_height="wrap_content"/>




        </LinearLayout>


    </LinearLayout>



</ScrollView>